src/test/ui/compile-fail-migration/borrowck/borrowck-move-out-of-overloaded-auto-deref.mir.stderr
error[E0507]: cannot move out of borrowed content
  --> $DIR/borrowck-move-out-of-overloaded-auto-deref.rs:17:14
   |
LL |     let _x = Rc::new(vec![1, 2]).into_iter();
   |              ^^^^^^^^^^^^^^^^^^^ cannot move out of borrowed content

error: aborting due to previous error

For more information about this error, try `rustc --explain E0507`.
